# multimodal-viz

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  build_exe.bat  main.py  multimodal-viz.spec  package-lock.json  pyi_rth_utf8.py  pyproject.toml  requirements.txt  run_pipeline.py  一键生成.bat
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: bug-report.md
app/: __init__.py  main_window.py  services.py
core/: __init__.py  __main__.py  cli.py  extractor.py  html_renderer.py  knowledge_graph.py  pdf_reader.py
docs/memory-bank/: 01-product-design.md  02-architecture.md  03-implementation-plan.md  04-progress.md  05-conventions.md
docs/superpowers/plans/: 2026-05-27-documentation-github-setup.md
docs/superpowers/specs/: 2026-05-26-desktop-packaging-design.md  2026-05-27-documentation-system-design.md
examples/: docker_agent_deploy.html  docker_agent_deploy.json  docker_agent_deploy.txt  docker_agent_deploy_article.md  docker_agent_deploy_v2.html  docker_agent_deploy_v2.json  docker_agent_deploy_v2_article.md  docker_agent_deploy_v3.html  docker_agent_deploy_v3.json  docker_agent_deploy_v3_article.md  learning_theories.html  learning_theories.json  learning_theories.txt  learning_theories_article.md
gui/: sidebar.py  theme.py  toast.py
gui/pages/: __init__.py  input_page.py  output_page.py  results_page.py  settings_page.py
gui/widgets/: __init__.py
